--- a/project/front/package.json
+++ b/project/front/package.json
@@ -9,7 +9,12 @@
     "react-google-maps": "^9.4.5",
     "react-google-places-autocomplete": "^1.3.1",
     "react-places-autocomplete": "^7.2.1",
-    "react-scripts": "0.9.5"
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "0.9.5",
+    "redux": "^4.0.1",
+    "redux-form": "^8.2.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
