--- a/project/front/package.json
+++ b/project/front/package.json
@@ -18,11 +18,13 @@
     "redux-form": "^8.2.1",
     "redux-thunk": "^2.3.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.13.0"
   }
 }
